--- a/edg-mkgridmap.config
+++ b/edg-mkgridmap.config
@@ -48,6 +48,7 @@ group vomss://voms.fnal.gov:8443/voms/nanohub nanohub
 #-------------------
 # USER-VO-MAP geant4 GEANT4 -- 20 -- Patricia Mendez Lorenzo (patricia.mendez@cern.ch)   
 group vomss://voms.cern.ch:8443/voms/geant4 geant4
+group vomss://voms2.cern.ch:8443/voms/geant4 geant4
 #-------------------
 # USER-VO-MAP osg OSG -- 23 -- Rob Quick (rquick@iupui.edu)    
 group vomss://voms.opensciencegrid.org:8443/voms/osg osg
@@ -58,6 +59,7 @@ group vomss://voms.grid.iu.edu:8443/voms/osgedu osgedu
 #-------------------
 # USER-VO-MAP ops OPS -- 26 -- Rob Quick (rquick@iupui.edu)    
 group vomss://voms.cern.ch:8443/voms/ops ops
+group vomss://voms2.cern.ch:8443/voms/ops ops
 #-------------------
 # USER-VO-MAP gpn gpn -- 28 -- Brian Bockelman (bbockelm@math.unl.edu)    
 group vomss://cluster.greatplains.net:8443/voms/gpn gpn
@@ -82,6 +84,7 @@ group vomss://grid-voms.desy.de:8443/voms/icecube icecube
 #-------------------
 # USER-VO-MAP alice ALICE -- 37 -- Latchezar Betev (latchezar.betev@cern.ch)
 group vomss://voms.cern.ch:8443/voms/alice alice 
+group vomss://voms2.cern.ch:8443/voms/alice alice 
 #-------------------
 #USER-VO-MAP gluex Gluex -- 40 -- Richard Jones (richard.t.jones@uconn.edu)
 group vomss://gryphn.phys.uconn.edu:8443/voms/Gluex gluex 
