--- a/edg-mkgridmap.config
+++ b/edg-mkgridmap.config
@@ -62,7 +62,7 @@ group vomss://vdvoms.vcell.uchc.edu:8443/voms/CompBioGrid compbiogrid
 group vomss://voms.fnal.gov:8443/voms/ilc ilc
 #-------------------
 # USER-VO-MAP nysgrid NYSGRID -- 32 -- Steve Gallo (smgallo@ccr.buffalo.edu)
-group vomss://dylan.ccr.buffalo.edu:8443/voms/nysgrid nysgrid
+group vomss://dylan.ccr.buffalo.edu:8443/voms/NYSGRID NYSGRID
 #-------------------
 # USER-VO-MAP sbgrid SBGrid -- 33 -- Ian Levesque (ian@crystal.harvard.edu)
 group vomss://hpc.sbgrid.org:8443/voms/SBGrid sbgrid
